refact: Release changes, styling, images, minor fixes, DocumentComponent

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -4,7 +4,7 @@
 
      <div fxFlex>
             <div>
-               <h3 class="header">Kontaktiere den HV TDP Stainz</h3>
+               <h3 class="large header">Kontaktiere den HV TDP Stainz</h3>
                <hr>
             </div>
      </div>
