--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,9 +1,9 @@
 <h1 style="text-align: center;">
-    Gallerie
+    Galerie
 </h1>
 
 <p class="normal" *ngIf="!selectedSeason">
-    Für unsere Fans haben wir alle HV TDP-Veranstaltungen archiviert. Viel Spaß beim Durchstöbern der offiziellen HV TDP-Gallerie.
+    Für unsere Fans haben wir alle HV TDP-Veranstaltungen archiviert. Viel Spaß beim Durchstöbern der offiziellen HV TDP-Galerie.
 </p>
 
 <div fxFlex *ngIf="!selectedSeason">
