feat: Add documents, add content

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -1,6 +1,6 @@
 <div class="h_iframe">
   &nbsp;
-  <iframe src="http://www.grenzlandcup.com/index.php/main/Spielplan" frameborder="0" allowfullscreen height="1400">
+  <iframe src="https://www.glc-fussball.at" frameborder="0" allowfullscreen height="1400">
   </iframe>
 </div>
 
