--- a/src/app/documents/documents.component.html
+++ b/src/app/documents/documents.component.html
@@ -1,8 +1,18 @@
-<h1 class="header">
-    COMING SOON!
+<h1 style="text-align: center;">
+    Dokumente
 </h1>
 
-<img class="center" src="assets/images/comingsoon.jpg">
+<p class="normal">
+    Hier findest du die Sammlung der wichtigsten Dokumente für HV TDP-Mitglieder und Fans.
+</p>
+
+<p class="normal">
+    <a href="assets/beitrittserklaerung.pdf">Beitrittserklärung</a>
+</p>
+
+<p class="normal">
+    <a href="assets/statuten.pdf">Statuten</a>
+</p>
 
 <br>
 <br>
