--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,8 +2,9 @@
 <!-- Banner -->
 <div class="ticker-wrap">
     <div class="ticker">
-      <div class="ticker__item">BREAKING NEWS:</div>
-      <div class="ticker__item">Mittwoch, 25.07.2018, 19:00 - offizieller Trainingsstart vom HV TDP!</div>
+      <!-- <div class="ticker__item">BREAKING NEWS:</div> -->
+      <div class="ticker__item">Nächstes Spiel: 25. Aug 2018 - 16:00, HV TDP Stainz - SV Raika Fresing-Ki­tzeck</div>
+      <!-- <div class="ticker__item">Mittwoch, 25.07.2018, 19:00 - offizieller Trainingsstart vom HV TDP!</div> -->
       <div class="ticker__item">Der HV TDP Stainz ist Meister 2017/2018 im Südweststeirercup!</div>
     </div>
 </div>
