--- a/src/styles.css
+++ b/src/styles.css
@@ -172,3 +172,14 @@ h1.header, h2.header, h3.header {
 @media (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */ }
 @media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
 @media (min-width:1281px) { /* hi-res laptops and desktops */ }
+
+
+.h_iframe iframe {
+    width:100%;
+    /* height:120%; */
+}
+
+.h_iframe {
+    width:100%;
+    height: 100%;
+}
