doc: Update content

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,8 +3,8 @@
 <div class="ticker-wrap">
     <div class="ticker">
       <!-- <div class="ticker__item">BREAKING NEWS:</div> -->
-      <div class="ticker__item">Nächstes Spiel: 15.09.2018 - 15:00, HV TDP Stainz - FC Stainztal</div>
-      <div class="ticker__item">15.09.2018 - 18:30, Summer Closing Party in der Mühle Stainz</div>
+      <!-- <div class="ticker__item">Nächstes Spiel: 14.10.2018 - 15:00, Groß St. Florian - HV TDP Stainz</div> -->
+      <div class="ticker__item">Der HV TDP beendet die Herbstsaison mit einem 3:3 zuhause gegen den HFC Leutschach</div>
       <!-- <div class="ticker__item">Mittwoch, 25.07.2018, 19:00 - offizieller Trainingsstart vom HV TDP!</div> -->
       <!-- <div class="ticker__item">Der HV TDP Stainz ist Meister 2017/2018 im Südweststeirercup!</div> -->
     </div>
