--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -47,7 +47,7 @@
     <div fxLayout="column" fxLayout.gt-sm="row">
       <mat-list>
         <mat-list-item class="listImage" *ngFor="let chef of chefs">
-          <img mat-list-avatar class='img-preview' src="{{chef.imagePath}}" alt="{{chef.firstName}} {{chef.lastName | uppercase}}" >
+          <img mat-list-avatar class='img-preview' src="{{imageBaseUrl + chef.imagePath}}" alt="{{chef.firstName}} {{chef.lastName | uppercase}}" >
           <h1 mat-line>{{chef.firstName}} {{chef.lastName | uppercase}}</h1>
           <h1 mat-line>{{chef.function}}</h1>
         </mat-list-item>
