--- a/src/app/donations/donations.component.html
+++ b/src/app/donations/donations.component.html
@@ -19,11 +19,11 @@
         <mat-list>
         <mat-list-item class="matchballListImage" *ngFor="let donation of donations">  
             
-            <img matListAvatar class='matchball-preview' src="{{donation.matchBallImagePath}}" alt="{{donation}}" (click)="selectDonation(donation)">
+            <img matListAvatar class='matchball-preview' src="{{imageBaseUrl + donation.matchBallImagePath}}" alt="{{donation.game}}" (click)="selectDonation(donation)">
             <br>
-            <h1 style="font-size:xx-large;font-weight:bold;" matLine>{{donation.date.toLocaleDateString()}}</h1>
+            <h1 style="font-size:xx-large;font-weight:bold;" matLine>{{donation.date}}</h1>
             <h1 style="font-size:x-large;" matLine>{{donation.donator}}</h1>
-            <h1 style="font-size:x-large;" matLine>{{donation.match}}</h1>
+            <h1 style="font-size:x-large;" matLine>{{donation.game}}</h1>
 
         </mat-list-item>
         </mat-list>
@@ -33,9 +33,9 @@
 <div *ngFor="let donation of donations">
     <div *ngIf="selectedDonation == donation">
         <p class="large">
-            {{donation.date}}, {{donation.match}}
+            {{donation.date}}, {{donation.game}}
         </p>
-        <img class="center" style="width: 25vw;" src="{{donation.imagePath}}" alt="{{donation.donator}}" (click)="back()">
+        <img class="center" style="width: 25vw;" src="{{imageBaseUrl + donation.imagePath}}" alt="{{donation.donator}}" (click)="back()">
 
         <p class="normal">
             {{donation.description}}
