--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -10,15 +10,15 @@
                              && news.indexOf(newsItem) + 1 <= (this.pageEvent.pageIndex + 1) * (this.pageEvent.pageSize)">
 
         <mat-expansion-panel-header>
-        {{newsItem.newsDate.toLocaleDateString()}} {{newsItem.title}}
+            {{newsItem.newsDate}} {{newsItem.title}}
         </mat-expansion-panel-header>
 
         <br>
-        <img class="center" style="width: 50vw;" src="{{newsItem.imagePath}}" alt= "{{newsItem.title}}">
+        <img class="center" style="width: 50vw;" src="{{imageBaseUrl + newsItem.imagePath}}" alt= "{{newsItem.title}}">
 
         <br>
-        <p *ngFor="let newsLine of newsItem.news">
-            {{newsLine.newsLine}}
+        <p style="white-space: pre-line;">
+            {{newsItem.news}}
         </p>
     
     </mat-expansion-panel>
