--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -4,7 +4,7 @@
       <mat-list>
         <mat-list-item class="listImage" *ngFor="let player of players">  
           
-          <img matListAvatar class='img-preview' src="{{player.imagePath}}" alt="{{player.firstName}} {{player.lastName}}">
+          <img matListAvatar class='img-preview' src="{{imageBaseUrl + player.imagePath}}" alt="{{player.firstName}} {{player.lastName}}">
           <h1 style="font-size:xx-large;font-weight:bold;" matLine class='txt-preview'>{{player.firstName}} {{player.lastName | uppercase}}</h1>
           <h1 style="font-size:x-large;" matLine class='txt-preview'>Position: {{player.position}}</h1> <!-- [style.font-weight]="400" -->
           
