feat: update/remove/add dependencies

--- a/src/app/donations/donations.component.html
+++ b/src/app/donations/donations.component.html
@@ -14,8 +14,8 @@
     <br>
 </div>
 
-<div fxFlex *ngIf="!selectedDonation">
-    <div fxLayout="column" fxLayout.gt-sm="row">
+<div *ngIf="!selectedDonation">
+    <div fxLayout="column">
         <mat-list>
         <mat-list-item class="matchballListImage" *ngFor="let donation of donations">  
             
