--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -46,49 +46,47 @@
           <!-- <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p> -->
           <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()" style="background-color: darkblue;color: rgba(255,255,255,.7);border: 27.4px solid;"> 
             <p>
-              <mat-input-container class="half-width"
-              dividerColor="{{(formErrors.firstname) ? 'warn' : 'primary'}}">
+              <mat-form-field class="half-width"
+              color="{{(formErrors.firstname) ? 'warn' : 'primary'}}">
                 <input class="formElement" matInput type="text" formControlName="firstname" placeholder="Vorname" required>
                 <mat-hint>
                   <span [hidden]="!(formErrors.firstname)">
                     {{formErrors.firstname}}</span>
                 </mat-hint>
-              </mat-input-container>
-              <mat-input-container class="half-width"
-               dividerColor="{{(formErrors.lastname) ? 'warn' : 'primary'}}">
+              </mat-form-field>
+              <mat-form-field class="half-width"
+               color="{{(formErrors.lastname) ? 'warn' : 'primary'}}">
                 <input class="formElement" matInput formControlName="lastname" placeholder="Nachname" type="text" required>
                 <mat-hint>
                   <span [hidden]="!(formErrors.lastname)">
                     {{formErrors.lastname}}</span>
                 </mat-hint>
-              </mat-input-container>
+              </mat-form-field>
             </p>
             <p>
-              <mat-input-container class="half-width"
-               dividerColor="{{(formErrors.email) ? 'warn' : 'primary'}}">
+              <mat-form-field class="half-width"
+               color="{{(formErrors.email) ? 'warn' : 'primary'}}">
                 <input matInput formControlName="email" placeholder="E-Mail" type="email" email required>
                 <mat-hint>
                   <span [hidden]="!(formErrors.email)">
                     {{formErrors.email}}</span>
                 </mat-hint>
-              </mat-input-container>
+              </mat-form-field>
             </p>
 
             <mat-slide-toggle formControlName="agreeContact">Dürfen wir dich kontaktieren?</mat-slide-toggle>
             <p>
-              <mat-input-container class="full-width">
+              <mat-form-field class="full-width">
                 <textarea class="formElement" matInput formControlName="message" placeholder="Dein Feedback" rows=12></textarea>
-              </mat-input-container>
+              </mat-form-field>
             </p>
             <p>
-                <!-- <mat-input-container class="full-width" dividerColor="{{(formErrors.gdpr) ? 'warn' : 'primary'}}"> -->
                 <mat-checkbox matInput formControlName="agreeGDPR">Mit dem Absenden dieser Nachrichten akzeptiere ich die Bestimmungen der Datenschutzgrundverordnung.</mat-checkbox>
                 <mat-hint>
                     <span [hidden]="(formErrors.gdpr)">
                         {{formErrors.gdpr}}
                     </span>
                 </mat-hint>
-                <!-- </mat-input-container> -->
             </p>
 
             <button style="margin: 100 auto;float: right; font-size: 20px" class="formElement" type="submit" mat-button class="background-primary" [disabled]="feedbackForm.invalid || feedbackForm.controls['agreeGDPR'].value == false" >Senden</button>
