--- a/src/styles.css
+++ b/src/styles.css
@@ -183,3 +183,66 @@ h1.header, h2.header, h3.header {
     width:100%;
     height: 100%;
 }
+
+
+/* Carousel */
+
+  
+.tile {
+    min-height: 500px;
+    max-height: 500px;
+    /* background-color: #ccc;
+    background-size: cover !important; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 100px;
+  }
+  
+  .leftRs {
+      position: absolute;
+      margin: auto;
+      top: 0;
+      bottom: 0;
+      width: 50px;
+      height: 50px;
+      box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, .3);
+      border-radius: 999px;
+      left: 0;
+    }
+  
+    .rightRs {
+      position: absolute;
+      margin: auto;
+      top: 0;
+      bottom: 0;
+      width: 50px;
+      height: 50px;
+      box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, .3);
+      border-radius: 999px;
+      right: 0;
+    }
+  
+  .myPoint {
+    list-style-type: none;
+    text-align: center;
+    padding: 12px;
+    margin: 0;
+    white-space: nowrap;
+    overflow: auto;
+    box-sizing: border-box;
+  }
+  .myPoint  li {
+      display: inline-block;
+      border-radius: 50%;
+      border: 2px solid rgba(0, 0, 0, 0.55);
+      padding: 4px;
+      margin: 0 3px;
+      transition-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
+      transition: 0.4s;
+  }
+  .myPoint  li.active {
+      background: #6b6b6b;
+      transform: scale(1.2);
+    }
+  
