--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -18,6 +18,12 @@
   <div fxFlex="100%" fxFlexAlign="center center">
     <br>
 
+    <div *ngIf="sessions" style="text-align:center;">
+      Der HV TDP bedankt sich bei {{sessions}} Besuchern seit 23.07.2018!
+    </div>
+
+    <br>
+
     <a href="http://www.textildruckprofi.com/" target="blank">
       <img class="imageSmallCenter" src="assets/images/tdp.jpg" width="10%">
     </a>
