feat: SEO, meta tags

--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -1,5 +1,9 @@
 
 <div fxFlex>
+    <h1 style="text-align: center;">
+      Unser Team
+    </h1>
+
     <div fxLayout="column" fxLayout.gt-sm="row">
       <mat-list>
         <mat-list-item class="listImage" *ngFor="let player of players">  
