content: Update championsship links

--- a/src/app/championship/championship.component.html
+++ b/src/app/championship/championship.component.html
@@ -1,6 +1,9 @@
+<br>
+<a class="center" href="http://www.stt-meisterschaft.at/node/7">http://www.stt-meisterschaft.at/node/7</a>
+
 <div class="h_iframe">
   &nbsp;
-  <iframe src="https://www.glc-fussball.at" frameborder="0" allowfullscreen height="1400">
+  <iframe src="http://www.stt-meisterschaft.at/node/7" frameborder="0" allowfullscreen height="1400">
   </iframe>
 </div>
 
