content: player list

--- a/src/app/membership/membership.component.html
+++ b/src/app/membership/membership.component.html
@@ -11,7 +11,65 @@
 </p>
 
 <p class="normal">
-    Einfach die hier verlinkte <a href="assets/beitrittserklaerung.pdf">Beitrittserklärung</a> ausfüllen und an unsere E-Mail-Adresse <a href="mailto:hvtdpstainz@gmx.at">hvtdpstainz@gmx.at</a> senden.
+    Einfach die hier verlinkte <a href="{{documentBaseUrl + 'beitrittserklaerung.pdf'}}">Beitrittserklärung</a> ausfüllen und an unsere E-Mail-Adresse <a href="mailto:hvtdpstainz@gmx.at">hvtdpstainz@gmx.at</a> senden.
+</p>
+
+<br>
+
+<p class="normal">
+    AKTIVE Mitglieder (Stand 11.05.2019):
+</p>
+
+<p class="small">
+    ADEMI Albert <br>
+    BAUER Markus <br>
+    BOHACEK Philipp <br>
+    DI MEO Rene <br>
+    FABIAN Daniel <br>
+    FLADENHOFER Stefan <br>
+    GÖDL Patrick <br>
+    HILBERGER Erik <br>
+    JAINDL Stefan <br>
+    KLÖSCH Philipp <br>
+    KOHLBERGER Herbert <br>
+    KOVACS David <br>
+    KREMSER Michael <br>
+    KÜGERL Mario <br>
+    LOSCHER Klaus <br>
+    MADERTHONER Christian <br>
+    NÖSTEL Rene <br>
+    OSWALD Alexander <br>
+    PICHLER Manuel <br>
+    PRIMUS Michael <br>
+    PUCHLEITNER Florian <br>
+    RATHSWOHL Lukas <br>
+    REINBACHER Julius <br>
+    REINBACHER Nico <br>
+    REINBACHER Patrick  <br>
+    RONEGG Robert <br>
+    SACKL Markus <br>
+    SCHNITTER Christian <br>
+    SCHRIEBL Florian <br>
+    SINCEK Hrvoje <br>
+    STELZER Andreas <br>
+    THOMANN Michael <br>
+    WOLF Patrick <br>
+</p>
+
+<p class="normal">
+FÖRDERNDE Mitglieder (Stand 11.05.2019):
+</p>
+
+<p class="small">
+    DI MEO Michaela <br>
+    FABIAN Gottfried <br>
+    FABIAN Ingrid <br>
+    HECHTL Daniel <br>
+    HERUNTER Andrea <br>
+    OBERLÄNDER Erhard <br>
+    PACHERNEGG Cornelia <br>
+    PACHERNEGG Kerstin <br>
+    PURKATHOFER Katharina <br>
 </p>
 
 <br>
